2011-10-04  Tristan Van Berkom <tvb@gnome.org>

	* plugins/gtk+/gtk+.xml.in, plugins/gtk+/glade-gtk.c: Ensure 'related-action'
	and 'use-action-appearance' are serialized in the right order.

2011-10-04  Juan Pablo Ugarte <juanpablougarte@gmail.com>

        * gladeui/glade-previewer.c:
          o Fixed bug #660874 "glade-previewer fails to open UI files without top windows"
          o Fixed bug 660872 "glade-previewer crashes on non-existent files"
          o Fixed runtime warnings in option parsing.

        * gladeui/glade-base-editor.c, gladeui/glade-project.c: fixed spelling errors

2011-09-19  Juan Pablo Ugarte <juanpablougarte@gmail.com>

        * gladeui/glade-object-stub.[ch]: Added new object type used to remember
          unknown objects in xml files.

        * gladeui/glade-utils.c: made glade_util_ui_message () accept markup strings.
        
        * gladeui/glade-xml-utils.[ch]: added new function glade_xml_node_copy()

        * gladeui/glade-widget.c:
          o glade_widget_read() create object stub if class is unknown.
          o glade_widget_write() used saved xml to dump stub objects.
        
        * glade/gladeui/glade-project.c: make GladeProject remember unknown catalogs
          to avoid loosing requirements when loading/saving a file with unknown objects. 

2011-09-19 Ignacio Casal Quinteiro <icq@gnome.org>

        * configure.ac, plugins/python/glade-python.c:
          Bump pygobject requisite to pygobject 3. Fixes bug #658667.

2011-06-14  Juan Pablo Ugarte <juanpablougarte@gmail.com>

	* gladeui/glade-project.h:
	  glade_property_class_set_virtual() renamed virtual paramenter to value to prevent C++ clash

	* gladeui/glade-property-class.[ch]: fixed _GladePointerMode and _GladeSupportMask enum declaration C++ error

2011-05-20  Juan Pablo Ugarte <juanpablougarte@gmail.com>

	* gladeui/glade-base-editor.c,
	  gladeui/glade-catalog.c
	  gladeui/glade-design-layout.c
	  gladeui/glade-editor-property.c