@@ -1,3 +1,8 @@
+2011-10-05  Tristan Van Berkom <tvb@gnome.org>
+
+	* plugins/gtk+/glade-gtk-grid.c: Update placeholders when a grid child's
+	  width or height child properties change.
+
 2011-10-04  Tristan Van Berkom <tvb@gnome.org>
 
 	* plugins/gtk+/gtk+.xml.in, plugins/gtk+/glade-gtk.c: Ensure 'related-action'
